fix vertical overflow on details page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,14 @@
   --white: #ffffff;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   box-sizing: border-box;
+  margin: 0;
 }
 
 *,
